src/tests/cases/snapshots/excise__tests__cases__ui__small_files_with_y_as_zero.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/small_files_with_y_as_zero  ◆ COMPLETE                                                                                                                             
 allocated #.#M   reclaim #.#M   apparent 1.4M   100 entries                                                                                                                                  
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────┬────────────────────────────────────────┐││Select an entry for identity,     │
││                                                                                                             │·Small entries··························│││bounds, state, and actions.       │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                    file1                                                    │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                 1.0M (72%)                                                  │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             │········································│││                                  │
││                                                                                                             ├────────────────────────────────────────┘││                                  │
└┴─────────────────────────────────────────────────────────────────────────────────────────────────────────────┴─────────────────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Small entries are a viewport summary · use / filter or zoom
