src/tests/cases/snapshots/excise__tests__cases__ui__small_width.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/ex[...]ll_width  ◆ COMPLETE         
 Used ##.#K · Reclaim ##.#K                       
Excise · REDUCED MOTION · store #.#K/#.#G         
▟ LIST ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏▌  file2                      8.0K   40.0%      ▕
▏   file3                      8.0K   40.0%      ▕
▏   file1                      4.0K   20.0%      ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▏                                                ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
                                                  
▟ SELECTED ITEM ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏file2                                           ▕
▏◆ COMPLETE · file                               ▕
▏Backspace delete                                ▕
▏Can reclaim #.#K                                ▕
▏Space used #.#K                                 ▕
▏Content size 8.0K · 0 items                     ▕
▏Scan result: included                           ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 arrows/hjkl move  Enter open/rescan  ? help
