src/tests/cases/snapshots/excise__tests__cases__ui__theme_change_requires_explicit_save_or_discard_on_exit.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/theme_save_prompt  ◆ COMPLETE                                            
 Space used #.#K · Can reclaim #.#K · Content size 4.0K · 1 items                                   
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
▟▐ STORAGE MAP ▌▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏█████████████████▟▐ QUIT ▌▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜█████████████████▕
▏█████████████████▏          Save interface preferences before quitting?         ▕█████████████████▕
▏█████████████████▏                                                              ▕█████████████████▕
▏█████████████████▏                       [s] Save and quit                      ▕█████████████████▕
▏█████████████████▏                    [d] Quit without saving                   ▕█████████████████▕
▏█████████████████▏                    [Esc/q/n] Keep working                    ▕█████████████████▕
▏█████████████████▏                                                              ▕█████████████████▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▏                                                              ▕▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
                  ▏                                                              ▕                  
▟▐ SELECTED ITEM ▌▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏file                                                                                              ▕
▏◆ COMPLETE · file                                                                                 ▕
▏Actions unavailable                                                                               ▕
▏Can reclaim #.#K · Space used #.#K                                                                ▕
▏Content size 4.0K · 0 items                                                                       ▕
▏Item check: Inode { device_id: ########, inode_number: ######## }                                 ▕
▏Scan result: included                                                                             ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 arrows/hjkl move  Enter open/rescan  / filter  e export  t theme  Backspace delete  ? help         
Excise · REDUCED MOTION
