src/tests/cases/snapshots/excise__tests__cases__ui__too_small_width_three.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
  Press q to quit.
