src/tests/cases/snapshots/excise__tests__cases__ui__too_small_width_two.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
                          
                          
                          
                          
                          
                          
                          
                          
                          
                          
                          
                          
                          
                          
                          
                          
                          
                          
                          
                          
                          
                          
                          
                          
Resize to at least 32 x 8.
     Press q to quit.
